# Gremlin-ShadTail-Trader

./: .gitignore  E2E-Test-Report.md  FIX_SUMMARY.md  GremlinTrader.desktop  HEALTH_CHECK_TESTING.md  README.md  Runtime-Test-1.md  build-desktop-app.sh  build-log.txt  install-all  install-and-launch.sh  install-log.txt  install.sh  launch-gremlin-trader.sh  package-lock.json  package.json  pyproject.toml  test_backend_health.py  test_e2e_backend.py  test_electron_health.js  test_health_functions.js  test_simple_server.py  turbo.json
.github/: copilot-instructions.md  (+1 more)
backend/: __init__.py  build-log.txt  main.py  main.spec  pyproject.toml  server.py  server.spec  server_old.py  test_backend.py
backend/Gremlin-Trade-Core/: IBKR-APi.trader.py
backend/Gremlin-Trade-Core/Gremlin_Trader_Tools/: Agents.out.py
backend/Gremlin-Trade-Core/Gremlin_Trader_Tools/Strategy-Agent/: signal_generator.py
backend/Gremlin-Trade-Core/Gremlin_Trader_Tools/Trade-Agent/: IBKR-API.trader.py
backend/Gremlin-Trade-Core/config/: Agent.in.py
backend/Gremlin-Trade-Memory/: embedder.py
backend/Gremlin_Trade_Core/: __init__.py  agent_coordinator.py  globals.py  market_data_service.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Strategies/: __init__.py  penny_stock_strategy.py  recursive_scanner.py  strategy_manager.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/: Agents_out.py  base_memory_agent.py  simple_market_service.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/Financial_Agent/: tax_estimator.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/Memory_Agent/: base_memory_agent.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/Rule_Set_Agent/: rule_set_agent.py  rules_engine.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/Run_Time_Agent/: runtime_agent.py  stock_scraper.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/Service_Agents/: market_data_service.py  simple_market_service.py
backend/Gremlin_Trade_Core/Gremlin_Trader_Tools/Strategy_Agent/: signal_generator.py  strategy_agent.py
backend/Gremlin_Trade_Core/config/: Agent_in.py  FullSpec.config
backend/Gremlin_Trade_Core/plugins/: __init__.py
backend/Gremlin_Trade_Memory/: Agent_in.py  __init__.py  embedder.py
backend/Gremlin_Trade_Memory/vector_store/: metadata.db
backend/dashboard_backend/: server.py
backend/dashboard_backend/Gremlin_Trade_Core/: globals.py  market_data_service.py  simple_market_service.py
backend/dashboard_backend/Gremlin_Trade_Memory/: embedder.py
(+128 files in other folders)
