[tool.poetry]
name = "dashboard-backend"
version = "0.1.0"
description = "Gremlin ShadTail Trader Backend API"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="0.23.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

