[tool.poetry]
name = "dashboard-backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="0.23.0"}
numpy = "^2.3.2"
pandas = "^2.3.1"
httpx = "^0.28.1"
chromadb = "^0.4.22"
sentence-transformers = "^2.2.2"
ib-insync = "^0.9.86"
yfinance = "^0.2.28"
websockets = "^12.0"
aiofiles = "^23.2.1"
sqlite3 = {version = "*", markers = "python_version >= '3.11'"}
scikit-learn = "^1.3.2"
ta = "^0.10.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

