[tool.poetry]
name = "dashboard-backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="0.23.0"}
numpy = "^1.24.0"
pandas = "^2.3.1"
httpx = "^0.28.1"
chromadb = "^0.4.22"
sentence-transformers = "^2.2.2"
ib-insync = "^0.9.86"
yfinance = "^0.2.18"
websockets = "^11.0"
aiofiles = "^23.2.1"
scikit-learn = "^1.3.2"
ta = "^0.10.2"
python-dotenv = "^1.0.0"
requests = "^2.32.4"
pillow = "^10.0.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.0"
asyncio-mqtt = "^0.16.0"
schedule = "^1.2.0"
apscheduler = "^3.10.0"
python-jose = "^3.3.0"
cryptography = "^41.0.0"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
pymongo = "^4.6.0"
motor = "^3.3.0"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
redis = "^5.0.0"
celery = "^5.3.0"
websocket-client = "^1.6.0"
aiohttp = "^3.12.14"
python-binance = "^1.0.29"
ccxt = "^4.4.96"
python-telegram-bot = "^22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

